--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="src/styles/css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,regular,700,300italic,italic,700italic" rel="stylesheet" />
+	<script defer src="index.js"></script>
 	<title>Document</title>
 </head>
 <body>
-	<p>hello</p>
+	<div class="container">
+	</div>
 </body>
 </html>
