--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -5,11 +5,42 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="src/styles/css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,regular,700,300italic,italic,700italic" rel="stylesheet" />
+	<script src="https://kit.fontawesome.com/1231ac999c.js" crossorigin="anonymous"></script>
 	<script defer src="index.js"></script>
-	<title>Document</title>
+	<title>image-galery</title>
 </head>
 <body>
+	<header>
+		<div class="container">
+			<div class="header__wrapper">
+				<a href="https://unsplash.com/">
+					<img class="header__logo" src="img/unsplash logo.png" alt="">
+				</a>
+				<div class="input-box">
+					<i class="fa-solid fa-magnifying-glass"></i>
+					<input class="input-text" type="search" placeholder="Search images">
+				</div>
+			</div>
+		</div>
+	</header>
+
 	<div class="container">
+		<div class="images-content"></div>
 	</div>
-</body>
+	
+	<footer>
+		<div class="container">
+			<div class="footer__content">
+				<div class="footer__wrapper">
+					<a href="https://github.com/Matuxa1503" target="_blank">
+						<div class="github"><i class="fa-brands fa-github"></i></div>
+					</a>
+					<div class="year">2023</div>
+					<a href="https://rs.school/js-stage0/" target="_blank">
+						<img class="school" src="img/rs_school.png" alt="">
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 </html>
