--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="src/styles/css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,regular,700,300italic,italic,700italic" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="img/image.png">
 	<script src="https://kit.fontawesome.com/1231ac999c.js" crossorigin="anonymous"></script>
 	<script defer src="index.js"></script>
 	<title>image-galery</title>
@@ -18,7 +19,7 @@
 				</a>
 				<div class="input-box">
 					<i class="fa-solid fa-magnifying-glass"></i>
-					<input class="input-text" type="search" placeholder="Search images">
+					<input class="input-text" type="search" placeholder="Search images" autofocus autocomplete="off">
 				</div>
 			</div>
 		</div>
