feat: added enemy in html, added enemy style, added move enemy, added shot keypress space player and hit in enemy in index.js

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -7,6 +7,10 @@
 	<script defer src="index.js"></script>
 	<title>Tanks Game</title>
 </head>
-<body class="game-zone">
+<body>
+	<div class="game-zone">
+		<div class="enemy"></div>
+	</div>
+	
 </body>
 </html>
