feat: added game info in index.html and style.css. Added counter, random position enemy in game zone, index.js

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Pixelify+Sans:regular,700" rel="stylesheet"/>
 	<link rel="stylesheet" href="style.css">
 	<script defer src="index.js"></script>
 	<title>Tanks Game</title>
 </head>
 <body>
 	<div class="game-zone">
-		<div class="enemy"></div>
+		<div class="game__info">
+			<div class="game__name">Имя Игрока: Андрей</div>
+			<div class="game__counter">Cчёт:<span class="counter">0</span></div>
+		</div>
 	</div>
 	
 </body>
