feat: added game heart and game over in html. Added functiongameOver and nextStart, added collision with enemy and restart game with update hp

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -10,11 +10,27 @@
 </head>
 <body>
 	<div class="game-zone">
-		<div class="game__info">
-			<div class="game__name">Имя Игрока: Андрей</div>
-			<div class="game__counter">Cчёт:<span class="counter">0</span></div>
+
+		<div class="game__status">
+			<div class="game__info">
+				<div class="game__name">Имя Игрока: Андрей</div>
+				<div class="game__counter">Cчёт:<span class="counter">0</span></div>
+			</div>
+
+			<div class="game__heart">
+				<img src="img/heart1.png" alt="" class="heartOne">
+				<img src="img/heart1.png" alt="" class="heart heartTwo">
+				<img src="img/heart1.png" alt="" class="heart heartThree">
+			</div>
+		</div>
+
+		<div class="game__over noneDisplay">
+			<p>Game Over</p>
+			<button>Click for restart</button>
 		</div>
 	</div>
+
+
 	
 </body>
 </html>
